--- a/package.json
+++ b/package.json
@@ -2,18 +2,26 @@
   "name": "angular-front-end",
   "version": "0.0.0",
   "scripts": {
+    "heroku-postbuild": "ng build --prod",
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
+  "engines": {
+    "node": "10.13.0",
+    "npm": "6.4.1"
+  },
   "private": true,
   "dependencies": {
+    "@angular-devkit/build-angular": "~0.1100.4",
     "@angular/animations": "~12.2.0",
     "@angular/cdk": "^12.2.11",
+    "@angular/cli": "^11.0.4",
     "@angular/common": "~12.2.0",
     "@angular/compiler": "~12.2.0",
+    "@angular/compiler-cli": "^11.0.4",
     "@angular/core": "~12.2.0",
     "@angular/forms": "~12.2.0",
     "@angular/material": "^12.2.11",
@@ -23,16 +31,16 @@
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "@sweetalert2/ngx-sweetalert2": "^10.0.0",
     "axios": "^0.23.0",
+    "express": "^4.17.1",
     "material-icons": "^1.10.0",
+    "path": "^0.12.7",
     "rxjs": "~6.6.0",
     "sweetalert2": "^11.1.9",
     "tslib": "^2.3.0",
+    "typescript": "~4.0.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.2.3",
-    "@angular/cli": "~12.2.3",
-    "@angular/compiler-cli": "~12.2.0",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
@@ -40,7 +48,6 @@
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.3.5"
+    "karma-jasmine-html-reporter": "~1.7.0"
   }
 }
