--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "ng test"
   },
   "engines": {
-    "node": "10.13.0",
+    "node": "14.x",
     "npm": "6.4.1"
   },
   "private": true,
