--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "test": "ng test"
   },
   "engines": {
-    "node": "14.x",
-    "npm": "6.4.1"
+    "node": "14.x"
   },
   "private": true,
   "dependencies": {
